tests/jsr335/Semantics/InterfaceMethods/InheritanceOverriding/ShouldFail/syntax09/Test.java
public class Test {
	
	interface A {
		static void m(int i) { }
		default void m(int i) { }
	}
}